cmake_minimum_required(VERSION 3.24)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(A8 "1 Contest/A.cpp")
add_executable(B8 "1 Contest/B.cpp")
add_executable(C8 "1 Contest/C.cpp")
add_executable(A9 "2 Contest/A.cpp")
add_executable(B9 "2 Contest/B.cpp")
add_executable(D9 "2 Contest/D9.cpp")