cmake_minimum_required(VERSION 3.24)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(A8 "8 Contest/A.cpp")
add_executable(B8 "8 Contest/B.cpp")
add_executable(C8 "8 Contest/C.cpp")
add_executable(A9 "9 Contest/A.cpp")
add_executable(B9 "9 Contest/B.cpp")
add_executable(C9 "9 Contest/C.cpp")
add_executable(D9 "9 Contest/D.cpp")
add_executable(E9 "9 Contest/E.cpp")
add_executable(F9 "9 Contest/F.cpp")
add_executable(B10 "10 Contest/B.cpp")
add_executable(C10 "10 Contest/C.cpp")
add_executable(D10 "10 Contest/D.cpp")