cmake_minimum_required(VERSION 3.24)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

#add_executable(A8 "8 Contest/A.cpp")
#add_executable(B8 "8 Contest/B.cpp")
#add_executable(C8 "8 Contest/C.cpp")
#add_executable(A9 "9 Contest/A.cpp")
#add_executable(B9 "9 Contest/B.cpp")
#add_executable(C9 "9 Contest/C.cpp")
#add_executable(D9 "9 Contest/D.cpp")
#add_executable(E9 "9 Contest/E.cpp")
#add_executable(F9 "9 Contest/F.cpp")
#add_executable(A10 "10 Contest/A.cpp")
#add_executable(B10 "10 Contest/B.cpp")
#add_executable(C10 "10 Contest/C.cpp")
#add_executable(D10 "10 Contest/D.cpp")
#add_executable(A11 "11 Contest/A.cpp")
#add_executable(B11 "11 Contest/B.cpp")
#add_executable(C11 "11 Contest/C.cpp")
#add_executable(D11 "11 Contest/D.cpp")
#add_executable(E11 "11 Contest/E.cpp")
#add_executable(F11 "11 Contest/Fmy.cpp")
#add_executable(test "11 Contest/test.cpp")
#add_executable(LC LiveCoding.cpp)
#add_executable(A12 "12 Contest/A&B.cpp")
add_executable(D12 "12 Contest/D.cpp")
#add_executable(E12 "12 Contest/E.cpp")
#add_executable(F12 "12 Contest/F.cpp")